--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass": "^1.49.9"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.3",
