resolve import inconsistencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src",
-    "paths": {
-      "@interfaces": ["./interfaces"],
-      // "@databases": ["./hard-datas"],
-    },
+    // "baseUrl": "./src",
+    // "paths": {
+    //   "@interfaces": ["./interfaces"],
+    //   // "@databases": ["./hard-datas"],
+    // },
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
