chore: aboslute path for redux functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "paths": {
       "@interfaces": ["src/interfaces"],
       "@utils": ["src/utils"],
-      // "@databases": ["./hard-datas"],
+      "@store": ["src/redux"],
     },
   },
   "include": ["src"],
