absolute path for manager pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@interfaces": ["src/interfaces"],
       "@utils": ["src/utils"],
       "@store": ["src/redux"],
+      "@managers": ["src/modules/managers"],
     },
   },
   "include": ["src"],
