--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@store": ["src/redux"],
       "@managers": ["src/modules/managers"],
       "@manager-components": ["src/modules/managers/components"],
+      "@users": ["src/modules/users"],
     },
   },
   "include": ["src"],
