absolut path fot users components and hard databaes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,12 @@
     "paths": {
       "@interfaces": ["src/interfaces"],
       "@utils": ["src/utils"],
+      "@databases": ["src/databases"],
       "@store": ["src/redux"],
       "@managers": ["src/modules/managers"],
       "@manager-components": ["src/modules/managers/components"],
       "@users": ["src/modules/users"],
+      "@user-components": ["src/modules/users/components"],
     },
   },
   "include": ["src"],
